[tool.poetry]
name = "hnswlib-fork"
version = "0.1.0"
description = "Fork for HNSW"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pybind11 = "2.10.4"
setuptools = "68.2.2"
wheel = "0.41.3"
numpy = "^1.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
